objects/Error_c__x.object
<CustomObject>
    <externalDataSource>HDMP_QA</externalDataSource>
    <externalName>Error__c</externalName>
    <fields>
        <fullName>Account_c__c</fullName>
        <externalDeveloperName>Account__c</externalDeveloperName>
        <label>Account</label>
        <length>18</length>
        <referenceTo>Account__x</referenceTo>
        <relationshipName>Errors2</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Cart_c__c</fullName>
        <externalDeveloperName>Cart__c</externalDeveloperName>
        <label>Cart</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClassName_c__c</fullName>
        <externalDeveloperName>ClassName__c</externalDeveloperName>
        <label>ClassName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Duration_c__c</fullName>
        <externalDeveloperName>Duration__c</externalDeveloperName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_Message_c__c</fullName>
        <externalDeveloperName>Error_Message__c</externalDeveloperName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Type_c__c</fullName>
        <externalDeveloperName>Error_Type__c</externalDeveloperName>
        <label>Error Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flow_Name_c__c</fullName>
        <externalDeveloperName>Flow_Name__c</externalDeveloperName>
        <label>Flow Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>Last Referenced Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>Last Viewed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Line_Number_c__c</fullName>
        <externalDeveloperName>Line_Number__c</externalDeveloperName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MethodName_c__c</fullName>
        <externalDeveloperName>MethodName__c</externalDeveloperName>
        <label>MethodName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Error Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notify_Support_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Notify_Support__c</externalDeveloperName>
        <label>Notify Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Transaction_c__c</fullName>
        <externalDeveloperName>Order_Transaction__c</externalDeveloperName>
        <label>Order Transaction</label>
        <length>18</length>
        <referenceTo>Order_Transaction_c__x</referenceTo>
        <relationshipName>Errors</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Order_c__c</fullName>
        <externalDeveloperName>Order__c</externalDeveloperName>
        <label>Order</label>
        <length>18</length>
        <referenceTo>Order__x</referenceTo>
        <relationshipName>Errors</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Account_c__c</fullName>
        <externalDeveloperName>Person_Account__c</externalDeveloperName>
        <label>Person Account</label>
        <length>18</length>
        <referenceTo>Account__x</referenceTo>
        <relationshipName>Errors</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>RecordId_c__c</fullName>
        <externalDeveloperName>RecordId__c</externalDeveloperName>
        <label>RecordId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Payload_c__c</fullName>
        <externalDeveloperName>Request_Payload__c</externalDeveloperName>
        <label>Request Payload</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Required_Fields_c__c</fullName>
        <externalDeveloperName>Required_Fields__c</externalDeveloperName>
        <label>Required Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Payload_c__c</fullName>
        <externalDeveloperName>Response_Payload__c</externalDeveloperName>
        <label>Response Payload</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Severity_c__c</fullName>
        <externalDeveloperName>Severity__c</externalDeveloperName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Application_c__c</fullName>
        <externalDeveloperName>Source_Application__c</externalDeveloperName>
        <label>Source Application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dreamshop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StackTrace_c__c</fullName>
        <externalDeveloperName>StackTrace__c</externalDeveloperName>
        <label>StackTrace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_c__c</fullName>
        <externalDeveloperName>Status__c</externalDeveloperName>
        <label>Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Notification_Date_c__c</fullName>
        <externalDeveloperName>Support_Notification_Date__c</externalDeveloperName>
        <label>Support Notification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UserInfo_c__c</fullName>
        <externalDeveloperName>UserInfo__c</externalDeveloperName>
        <label>UserInfo</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cartCheckoutSessionId_c__c</fullName>
        <externalDeveloperName>cartCheckoutSessionId__c</externalDeveloperName>
        <label>cartCheckoutSessionId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Error Ext</label>
    <pluralLabel>Errors Ext</pluralLabel>
</CustomObject>